<resources>
    <string name="app_name">ProjetoPI</string>
    <string name="action_settings">Settings</string>

    <string name="back">back</string>
    <string name="get_password_link">Get Password</string>
    <string name="email_hint">Type your email here</string>
    <string name="password_hint">Type your password here</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Sign up</string>
    <string name="update_pass">Update Password</string>
    <string name="logout">Logout</string>
    <string name="new_password">Change Password</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="email_autofill">example@gmail.com</string>
    <string name="hour_btn">Hours</string>
    <string name="day_btn">Days</string>
    <string name="month_btn">Months</string>
    <string name="temp_btn">Temperature</string>
    <string name="air_hum_btn">Air Humidity</string>
    <string name="soil_hum_btn">Soil Humidity</string>
    <string name="lum_btn">Luminosity</string>
    <string name="bat_charge_btn">Battery Charge</string>
    <string name="noDeviceWarningText">There is no device associated with this account\nDo you want to create one?</string>
    <string name="connect_device">Connect Device</string>
    <string name="devices">Bluetooth Devices</string>
    <string name="send_btn">Send Data</string>
    <string name="pass_hint">home123</string>
    <string name="ssid_hint">Home Network Name</string>
    <string name="ssid_autofill">My Home Network Name</string>
    <string name="shum_autofill">Ex.: 50</string>
    <string name="shum_hint">Type the % soil humidity you want</string>
</resources>
