<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/hour_btn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/hour_btn"
        app:layout_constraintEnd_toStartOf="@+id/day_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/day_btn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/day_btn"
        app:layout_constraintStart_toEndOf="@+id/hour_btn"
        app:layout_constraintEnd_toStartOf="@+id/month_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/month_btn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/month_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/day_btn"
        app:layout_constraintTop_toTopOf="parent" />
    <Switch
        android:id="@+id/air_hum_sw"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/air_hum_btn"
        android:checked="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bat_charge_sw"
        app:layout_constraintTop_toBottomOf="@+id/hour_btn" />

    <Switch
        android:id="@+id/bat_charge_sw"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/bat_charge_btn"
        android:checked="false"
        app:layout_constraintStart_toEndOf="@+id/air_hum_sw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_btn" />

    <Switch
        android:id="@+id/temp_sw"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/temp_btn"
        android:checked="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/soil_hum_sw"
        app:layout_constraintTop_toBottomOf="@+id/air_hum_sw" />

    <Switch
        android:id="@+id/soil_hum_sw"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/soil_hum_btn"
        android:checked="false"
        app:layout_constraintStart_toEndOf="@id/temp_sw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bat_charge_sw" />

    <Switch
        android:id="@+id/lum_sw"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/lum_btn"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soil_hum_sw" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/update_pass_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lum_sw"
        android:layout_height="0dp" >
    </com.github.mikephil.charting.charts.LineChart>

    <Button
        android:id="@+id/update_pass_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/update_pass"
        app:layout_constraintBottom_toTopOf="@+id/logout_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>