<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/NoDeviceWarning"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/noDeviceWarningText"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"
        />

    <Button
        android:id="@+id/connectDevice"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/connect_device"
        app:layout_constraintTop_toBottomOf="@+id/NoDeviceWarning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"
        />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@+id/connectDevice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>